[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.poetry]
name = "securedrop-proxy"
version = "0.1.0"
description = "Qubes RPC proxy service for the SecureDrop Client"
authors = ["SecureDrop Team"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-httpbin = "^2.0.0"
# needed for httpbin, see https://github.com/psf/httpbin/issues/36
werkzeug = "<2.1.0"
